# nexushelloworld

./: setup.cfg  setup.py
hello/: urls.py  views.py
hello/templates/: index.html  layout.html  response.html
helloworld/: settings.py  urls.py
src/: note.txt
