[metadata]
name = nexushelloworld
version = 0.0.2
author = Stephon Fraser
author_email = stephonfraserofficial@gmail.com
description = This project is created as part of the DevOps training.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pr0f3ss0rst3ph/nexushelloworld.git
project_urls =
    Bug Tracker = https://github.com/pr0f3ss0rst3ph/nexushelloworld.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src